--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "moment": "^2.29.4",
+    "mongoose": "^7.3.3",
     "morgan": "^1.10.0",
     "uuid": "^9.0.0",
     "yargs": "^17.7.2"
