--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.3.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0",
     "yargs": "^17.7.2"
   },
